Fixed header not aligned to left.

--- a/css/basic.css
+++ b/css/basic.css
@@ -55,6 +55,7 @@ a:hover
 
 h1, h2, h3, h4, h5, h6
 {
+	clear: left;
     font-weight: 700;
     font-family: "Roboto Slab","ff-tisa-web-pro","Georgia","Arial","sans-serif";
 	margin-bottom: 1.5em;
